deploy/service.yaml
apiVersion: v1

kind: Service

metadata:
  name: minimal-books-api-service

spec:
  selector:
    app: minimal-books-api

  ports:
  - protocol: TCP
    port: 5256  # The port you want to expose externally
    targetPort: 80  # The port your ASP.NET Core app listens on

  type: NodePort  # Change this to NodePort or Ingress if needed
