deploy/ingress.yaml
apiVersion: networking.k8s.io/v1

kind: Ingress

metadata:
  name: minimal-books-api-ingress
  
spec:
  rules:
    - http:
        paths:
          - pathType: Prefix
            path: /
            backend:
              service:
                name: minimal-books-api-service
                port:
                  number: 5256  # The port your ASP.NET Core app listens on (inside the pod)
